@@ -332,6 +332,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
                     <argLine>-Djersey.config.test.container.port=8400</argLine>
                     <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
                     <argLine>-Djavax.net.ssl.trustStore=config/nsi-pce-truststore</argLine>
